fixed some overflow issue

--- a/public/body.css
+++ b/public/body.css
@@ -1,13 +1,11 @@
 body
 {
   margin: 0;
-  
-  overflow: hidden;
 }
 
+#placeholder,
 #app
 {
-  margin: 0;
-
+  overflow: hidden;
   font-size: calc(6px + 0.4vw + 0.4vh);
 }
